--- a/GTC.html
+++ b/GTC.html
@@ -210,7 +210,7 @@
                     </section>
                     <section class="section-content">
                       <div class="intro-container">
-                          <h2 class="contest-title">Contest Details</h2>
+                          <h2 class="contest-title">Meta Quest Drawing Details</h2>
                             <p>1. If you don't already have a Snowflake trial account, make one. You will need to put in your credit card but don't worry there are free credits so you shouldn't need to spend any money as long as you spin everything down after.</p>
                             <p>2. Go to the  <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo">Tempo app on the Snowflake marketplace here</a> and install the app.</p>
                             <p>3. Complete the steps from the guide (grant permissions, launch app, initialize resources, run static inference, and perform deep dive analysis).</p>
