--- a/GTC.html
+++ b/GTC.html
@@ -182,7 +182,7 @@
                     <section class="section-content">
                       <div class="intro-container">
                         <p style="font-size: 2.2rem; line-height: 1.7;">
-                          DeepTempo, a leader in AI-driven cybersecurity solutions, is excited to announce our participation in NVIDIA's GTC 2025 conference, taking place from March 17–21, 2025, in San Jose, California.
+                          DeepTempo, a new player in AI-driven cybersecurity solutions, will be participating in NVIDIA's GTC 2025 conference, taking place from March 17–21, 2025, in San Jose, California.
                           <span style="color: #ff2702; font-weight: 600;">We will be showcasing a live demonstration of our Snowflake Native App, Tempo, at the Snowflake booth.</span>
                           Tempo is the first cybersecurity incident identification solution available as a Native App on Snowflake. It leverages deep learning to protect enterprises and service providers from sophisticated cyber threats. Designed for flexibility, Tempo adapts to various organizational structures and security requirements, offering enhanced cost savings and productivity. It is available for free trials with demo data on the Snowflake Marketplace.
                         </p>
@@ -204,7 +204,7 @@
                     <section class="section-content">
                       <div class="intro-container">
                         <p class="paragraph">
-                          Join us at GTC 2025 to discover how DeepTempo is revolutionizing cybersecurity with deep learning and Snowflake's data platform. For more information, visit <a href="https://deeptempo.ai" target="_blank">DeepTempo</a> or <a href="https://nvidia.com" target="_blank">NVIDIA's GTC website</a>.
+                          Join us at GTC 2025 to discover how DeepTempo is changing cybersecurity with deep learning and Snowflake's data platform. For more information, visit <a href="https://deeptempo.ai" target="_blank">DeepTempo</a> or <a href="https://nvidia.com" target="_blank">NVIDIA's GTC website</a>.
                         </p>
                       </div>
                     </section>
