--- a/GTC.html
+++ b/GTC.html
@@ -170,7 +170,18 @@
                 <div class="navbar__close" id="close-menu">&times;</div>
             </nav>
         </header>
-                            <!-- Hero Section with Consistent Styling -->
+                    <section class="section-content">
+                      <div class="intro-container">
+                          <h2 class="contest-title">Meta Quest Drawing Details</h2>
+                            <p>1. If you don't already have a Snowflake trial account, make one. You will need to put in your credit card but don't worry there are free credits so you shouldn't need to spend any money as long as you spin everything down after.</p>
+                            <p>2. Go to the  <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo">Tempo app on the Snowflake marketplace here</a> and install the app.</p>
+                            <p>3. Complete the steps from the guide (grant permissions, launch app, initialize resources, run static inference, and perform deep dive analysis).</p>
+                            <p>4. Submit a row from the output of Tempo that shows a malicious event being detected to the form below.</p>
+                        <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
+                        <div class="hs-form-frame" data-region="na1" data-form-id="c82bb4fa-2a26-441b-a959-0038e721aa6e" data-portal-id="48299015"></div>
+                      </div>
+                    </section>
+                    <!-- Hero Section with Consistent Styling -->
                     <section class="hero-section">
                       <div class="hero-section-content">
                         <h1 class="hero-title">DeepTempo at NVIDIA's GTC 2025</h1>
@@ -182,9 +193,9 @@
                     <section class="section-content">
                       <div class="intro-container">
                         <p style="font-size: 2.2rem; line-height: 1.7;">
-                          DeepTempo, a new player in AI-driven cybersecurity solutions, will be participating in NVIDIA's GTC 2025 conference, taking place from March 17–21, 2025, in San Jose, California.
+                          DeepTempo, a new player in deep learning cybersecurity solutions, will be participating in NVIDIA's GTC 2025 conference, taking place from March 17–21, 2025, in San Jose, California.
                           <span style="color: #ff2702; font-weight: 600;">We will be showcasing a live demonstration of our Snowflake Native App, Tempo, at the Snowflake booth.</span>
-                          Tempo is the first cybersecurity incident identification solution available as a Native App on Snowflake. It leverages deep learning to protect enterprises and service providers from sophisticated cyber threats. Designed for flexibility, Tempo adapts to various organizational structures and security requirements, offering enhanced cost savings and productivity. It is available for free trials with demo data on the Snowflake Marketplace.
+                          <span style="color: #ff2702; font-weight: 600;">Tempo is the first cybersecurity incident identification solution available as a Native App on Snowflake.</span> It leverages deep learning to protect enterprises and service providers from sophisticated cyber threats. Designed for flexibility, Tempo adapts to various organizational structures and security requirements, offering enhanced cost savings and productivity. It is available for free trials with demo data on the Snowflake Marketplace.
                         </p>
                       </div>
                     </section>
@@ -206,17 +217,6 @@
                         <p class="paragraph">
                           Join us at GTC 2025 to discover how DeepTempo is changing cybersecurity with deep learning and Snowflake's data platform. For more information, visit <a href="https://deeptempo.ai" target="_blank">DeepTempo</a> or <a href="https://nvidia.com" target="_blank">NVIDIA's GTC website</a>.
                         </p>
-                      </div>
-                    </section>
-                    <section class="section-content">
-                      <div class="intro-container">
-                          <h2 class="contest-title">Meta Quest Drawing Details</h2>
-                            <p>1. If you don't already have a Snowflake trial account, make one. You will need to put in your credit card but don't worry there are free credits so you shouldn't need to spend any money as long as you spin everything down after.</p>
-                            <p>2. Go to the  <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo">Tempo app on the Snowflake marketplace here</a> and install the app.</p>
-                            <p>3. Complete the steps from the guide (grant permissions, launch app, initialize resources, run static inference, and perform deep dive analysis).</p>
-                            <p>4. Submit a row from the output of Tempo that shows a malicious event being detected to the form below.</p>
-                        <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
-                        <div class="hs-form-frame" data-region="na1" data-form-id="c82bb4fa-2a26-441b-a959-0038e721aa6e" data-portal-id="48299015"></div>
                       </div>
                     </section>
         <footer class="footer">
