--- a/GTC.html
+++ b/GTC.html
@@ -194,7 +194,7 @@
                           <h2 class="contest-title">Meta Quest Drawing Details</h2>
                             <p>1. If you don't already have a Snowflake trial account, make one. You will need to put in your credit card but don't worry there are free credits so you shouldn't need to spend any money as long as you spin everything down after.</p>
                             <p>2. Go to the  <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo">Tempo app on the Snowflake marketplace here</a> and install the app.</p>
-                            <p>3. Complete the steps from the guide (grant permissions, launch app, initialize resources, run static inference, and perform deep dive analysis).</p>
+                            <p>3. Complete the steps from the <a href="https://docs.deeptempo.ai/docs/snowflake">guide</a> (grant permissions, launch app, initialize resources, run static inference, and perform deep dive analysis).</p>
                             <p>4. Submit a row from the output of Tempo that shows a malicious event being detected to the form below.</p>
                         <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
                         <div class="hs-form-frame" data-region="na1" data-form-id="c82bb4fa-2a26-441b-a959-0038e721aa6e" data-portal-id="48299015"></div>
