--- a/LogLM_ML.html
+++ b/LogLM_ML.html
@@ -23,7 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
-    <title>LogLM vs. ML | DeepTempo</title>
+    <title>DeepTempo | LogLM vs ML/UEBA</title>
 
     <!-- Additional custom styles for this page -->
     <style>
@@ -126,7 +126,7 @@
         justify-content: center;
         align-items: center;
       }
-      /* Triangle diagram styling – larger size, adjusted viewBox so text isn’t cut off */
+      /* Triangle diagram styling – larger size, adjusted viewBox so text isn't cut off */
       .triangle-svg {
         width: 300px;
         height: 260px;
@@ -145,42 +145,8 @@
     </style>
   </head>
   <body>
-    <!-- Header / Navigation -->
-    <header class="navbar">
-      <div class="navbar__logo">
-        <img src="img/logo-full-color.png" alt="DeepTempo Logo" />
-      </div>
-      <div class="navbar__toggle" id="mobile-menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-      <nav class="navbar__nav" id="navbar-overlay">
-        <ul class="navbar__list">
-          <li class="navbar__item">
-            <a href="index.html" class="navbar__link">Home</a>
-          </li>
-          <li class="navbar__item">
-            <a href="product.html" class="navbar__link">Product</a>
-          </li>
-          <li class="navbar__item">
-            <a href="about-us.html" class="navbar__link">About Us</a>
-          </li>
-          <li class="navbar__item">
-            <a href="https://medium.com/deeptempo" target="_blank" class="navbar__link">Blog</a>
-          </li>
-          <li class="navbar__item">
-            <a href="http://docs.deeptempo.ai/" target="_blank" class="navbar__link">Documentation</a>
-          </li>
-          <li class="navbar__item">
-            <a href="contact-us.html" class="navbar__link">Contact Us</a>
-          </li>
-        </ul>
-        <div class="navbar__close" id="close-menu">&times;</div>
-      </nav>
-    </header>
+    <!-- Header will be inserted here by JavaScript -->
 
-    <!-- Hero Section -->
     <section class="hero-section">
       <div class="hero-section-content">
         <h1 class="hero-title">LogLM vs. ML</h1>
@@ -195,7 +161,7 @@
       <div class="intro-container">
         <p style="font-size: 2.2rem; line-height: 1.7;">
           Traditional machine-learning approaches in cybersecurity rely upon many different models which are selected and trained by engineers to work in 
-          <span style="color: #ff2702;">specific environments.</span> In contrast, DeepTempo’s Tempo LogLM is a 
+          <span style="color: #ff2702;">specific environments.</span> In contrast, DeepTempo's Tempo LogLM is a 
           <span style="color: #ff2702;">Foundation Model</span> pretrained on vast amounts of log data, resulting in superior 
           <span style="color: #ff2702;">accuracy</span>, rapid 
           <span style="color: #ff2702;">adaptability</span>, and improved 
@@ -323,78 +289,25 @@
   </div>
 </section>
 
+    <!-- Footer will be inserted here by JavaScript -->
 
+    <!-- Include the header and footer components -->
+    <script src="js/header-component.js"></script>
+    <script src="js/footer-component.js"></script>
 
-    <!-- Footer Section -->
-    <footer class="footer">
-      <div class="row">
-        <div class="col-1-of-2">
-          <ul class="footer-nav">
-            <li>&copy; DeepTempo.ai - 2024. All rights reserved.</li>
-            <li>
-              <a href="docs/DeepTempo - Privacy Policy for Snowflake NativeApp.pdf">Privacy</a>
-            </li>
-            <li>
-              <a href="docs/Getting Started with TEMPO.pdf">Documentation</a>
-            </li>
-          </ul>
-          <div class="footer__social-media">
-            <a href="https://www.youtube.com/@DeepTempo-ai" target="_blank"
-              ><i class="fab fa-youtube"></i
-            ></a>
-            <a href="https://www.linkedin.com/groups/13114314/" target="_blank"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-            <a href="https://www.reddit.com/r/DeepTempo/" target="_blank"
-              ><i class="fab fa-reddit"></i
-            ></a>
-            <a href="https://medium.com/deeptempo" target="_blank"
-              ><i class="fab fa-medium"></i
-            ></a>
-          </div>
-          <div class="footer__certifications">
-            <img src="img/native-app-accelerator-badge.png" alt="Native App Accelerator Badge" class="footer-cert-logo" />
-            <img src="img/nvidia-inception-program-badge.png" alt="Nvidia Inception Program Badge" class="footer-cert-logo" />
-            <img src="img/BNY_Ascent.png" alt="BNY_Ascent Badge" class="footer-cert-logo">
-          </div>
-        </div>
-        <div class="col-1-of-2">
-          <picture class="footer__logo">
-            <img alt="Full logo" src="img/logo-full-color.png" />
-          </picture>
-          <p class="footer__copyright">
-            DeepTempo was built by a team of deep learning engineers and enterprise system builders,
-            many of whom have spent years in security operations teams. We believe in harnessing collective
-            defense for cybersecurity via deep learning, to make the lives of security operations teams
-            better while restoring the initiative to the defenders.
-          </p>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Mobile Menu Script -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EGVJW1TZT"></script>
     <script>
-      const mobileMenu = document.getElementById("mobile-menu");
-      const navbarNav = document.getElementById("navbar-overlay");
-      const closeMenu = document.getElementById("close-menu");
-
-      mobileMenu.addEventListener("click", () => {
-        navbarNav.classList.add("active");
-      });
-
-      closeMenu.addEventListener("click", () => {
-        navbarNav.classList.remove("active");
-      });
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-9EGVJW1TZT');
     </script>
 
-    <!-- HubSpot Embed Code -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      async
-      defer
-      src="//js.hs-scripts.com/48299015.js"
-    ></script>
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48299015.js"></script>
+    <!-- End of HubSpot Embed Code -->
   </body>
 </html>
 
