--- a/index.html
+++ b/index.html
@@ -33,43 +33,15 @@
     <!-- End of HubSpot Embed Code -->
     
     <body>
-        <header class="navbar">
-            <div class="navbar__logo">
-                <img src="img/logo-full-color.png" alt="DeepTempo Logo">
-            </div>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <nav class="navbar__nav" id="navbar-overlay">
-                <ul class="navbar__list">
-                    <li class="navbar__item"><a href="index.html" class="navbar__link active">Home</a></li>
-                    <li class="navbar__item"><a href="product.html" class="navbar__link">Product</a></li>
-                    <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
-                    <li class="navbar__item"><a href="https://deeptempo.ai/snowflake.html" class="navbar__link">Snowflake</a></li>
-                    <li class="navbar__item"><a href="https://medium.com/deeptempo" target="_blank" class="navbar__link">Blog</a></li>
-                    <li class="navbar__item"><a href="http://docs.deeptempo.ai/" target="_blank" class="navbar__link">Documentation</a></li>
-                    <li class="navbar__item"><a href="contact-us.html" class="navbar__link">Contact Us</a></li>
-                </ul>
-                <div class="navbar__close" id="close-menu">&times;</div>
-            </nav>
-        </header>
+        <!-- Header will be inserted here by JavaScript -->
 
-        <header class="header">
-            <div class="header__logo-box">
-                <!-- <img src="img/logo-white.png" alt="Logo" class="header__logo"> -->
+        <section class="hero-section">
+            <div class="hero-section-content">
+                <h1 class="hero-title">Cybersecurity powered by Deep Learning</h1>
+                <p class="hero-subtitle">Detect threats with unprecedented accuracy using our advanced AI models</p>
+                <p class="intro-text">DeepTempo's Tempo LogLM is a revolutionary deep learning model that understands the language of logs, providing unparalleled threat detection capabilities.</p>
             </div>
-
-            <div class="header__text-box">
-                <h1 class="heading-primary">
-                    <span class="heading-primary--main"><img alt="Full logo" src="img/logo-full-color.png"></span>
-                    <span class="heading-primary--sub">Cybersecurity powered by Deep Learning</span>
-                </h1>
-
-                <a href="#section-contact" class="btn btn--outline-white btn--animated">Get in touch</a>
-            </div>
-        </header>
+        </section>
 
         <main>
             <section class="section-about">
@@ -167,69 +139,10 @@
             </section>
         </main>
 
-        <footer class="footer">
-            <div class="row">
-                <div class="col-1-of-2">
-                    <ul class="footer-nav">
-                        <li>&copy; Skidaway, Inc. d/b/a DeepTempo. All rights reserved.</li>
-                        <li><a href="docs/DeepTempo - Privacy Policy for Snowflake NativeApp.pdf">Privacy</a></li>
-                        <li><a href="docs/Getting Started with TEMPO.pdf">Documentation</a></li>
-                    </ul>
-                    <div class="footer__social-media">
-                        <a href="https://www.youtube.com/@DeepTempo-ai" target="_blank"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.linkedin.com/groups/13114314/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://www.reddit.com/r/DeepTempo/" target="_blank"><i class="fab fa-reddit"></i></a>
-                        <a href="https://medium.com/deeptempo" target="_blank"><i class="fab fa-medium"></i></a>
-                        <!-- <a href="https://www.instagram.com/deep.tempo/" target="_blank"><i class="fab fa-instagram"></i></a> -->
-                        <!-- <a href="https://www.linkedin.com/company/deeptempo/" target="_blank"><i class="fab fa-facebook"></i></a> -->
-                    </div>
-                    <div class="footer__certifications">
-                        <img src="img/native-app-accelerator-badge.png" alt="Native App Accelerator Badge" class="footer-cert-logo">
-                        <img src="img/nvidia-inception-program-badge.png" alt="Nvidia Inception Program Badge" class="footer-cert-logo">
-                        <img src="img/BNY_Ascent.png" alt="BNY_Ascent Badge" class="footer-cert-logo">
-                    </div>
-                </div>
-                <div class="col-1-of-2">
-                    <picture class="footer__logo">
-                        <img alt="Full logo" src="img/logo-full-color.png">
-                    </picture>
-                    <p class="footer__copyright">
-                        DeepTempo was built by a team of deep learning engineers and enterprise system builders, many of whom have spent years in security operations teams.  We believe in harnessing collective defense for cyber security via deep learning, to make the lives of security operations teams better while restoring the initiative to the defenders.
-                    </p>
-                </div>
-            </div>
-        </footer>
+        <!-- Footer will be inserted here by JavaScript -->
 
-        <script>
-            const mobileMenu = document.getElementById('mobile-menu');
-            const navbarNav = document.getElementById('navbar-overlay');
-            const closeMenu = document.getElementById('close-menu');
-
-            mobileMenu.addEventListener('click', () => {
-                navbarNav.classList.add('active');
-            });
-
-            closeMenu.addEventListener('click', () => {
-                navbarNav.classList.remove('active');
-            });
-        </script>
-        <!-- Start of HubSpot Embed Code -->
-        <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48299015.js"></script>
-        <!--         End of HubSpot Embed Code -->
-                    <!-- Start of HubSpot code snippet -->
-<!--             <button type="button" id="hs_show_banner_button"
-            style="background-color: #425b76; border: 1px solid #425b76;
-                   border-radius: 3px; padding: 10px 16px; text-decoration: none; color: #fff;
-                   font-family: inherit; font-size: inherit; font-weight: normal; line-height: inherit;
-                   text-align: left; text-shadow: none;"
-            onClick="(function(){
-              var _hsp = window._hsp = window._hsp || [];
-              _hsp.push(['showBanner']);
-            })()"
-            >
-            Cookie Settings
-            </button> -->
-            
-            <!-- End of HubSpot code snippet -->
+        <!-- Include the header and footer components -->
+        <script src="js/header-component.js"></script>
+        <script src="js/footer-component.js"></script>
     </body>
 </html>
