--- a/snowflake.html
+++ b/snowflake.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>DeepTempo + Snowflake</title>
 
   <!-- Same fonts & CSS as your main site -->
@@ -181,27 +182,7 @@
 </head>
 
 <body>
-  <!-- NAVBAR (similar to your index.html) -->
-  <header class="navbar">
-    <div class="navbar__logo">
-      <img src="img/logo-full-color.png" alt="DeepTempo Logo">
-    </div>
-    <div class="navbar__toggle" id="mobile-menu">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-    <nav class="navbar__nav" id="navbar-overlay">
-      <ul class="navbar__list">
-        <li class="navbar__item"><a href="index.html" class="navbar__link">Home</a></li>
-        <li class="navbar__item"><a href="product.html" class="navbar__link">Product</a></li>
-        <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
-        <li class="navbar__item"><a href="snowflake.html" class="navbar__link active">Snowflake</a></li>
-        <li class="navbar__item"><a href="contact-us.html" class="navbar__link">Contact Us</a></li>
-      </ul>
-      <div class="navbar__close" id="close-menu">&times;</div>
-    </nav>
-  </header>
+  <!-- Header will be inserted here by JavaScript -->
 
   <!-- DIAGONAL HERO with Logos -->
   <section class="hero-split">
@@ -239,7 +220,7 @@
   </div>
   <!-- Short explanation or caption -->
   <p class="video-description">
-    Watch Cameron Wasilewsky, Snowflake Senior S/E, demonstrate Tempo’s incident identification, highlighting 
+    Watch Cameron Wasilewsky, Snowflake Senior S/E, demonstrate Tempo's incident identification, highlighting 
     seamless integration with Snowflake.
   </p>
 </section>
@@ -456,55 +437,11 @@
     </div>
   </section>
 
-  <!-- FOOTER (similar to index.html) -->
-  <footer class="footer">
-    <div class="row">
-      <div class="col-1-of-2">
-        <ul class="footer-nav">
-          <li>&copy; Skidaway, Inc. d/b/a DeepTempo. All rights reserved.</li>
-          <li><a href="docs/DeepTempo - Privacy Policy for Snowflake NativeApp.pdf">Privacy</a></li>
-          <li><a href="docs/Getting Started with TEMPO.pdf">Documentation</a></li>
-        </ul>
-        <div class="footer__social-media">
-          <a href="https://www.youtube.com/@DeepTempo-ai" target="_blank"><i class="fab fa-youtube"></i></a>
-          <a href="https://www.linkedin.com/groups/13114314/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://www.reddit.com/r/DeepTempo/" target="_blank"><i class="fab fa-reddit"></i></a>
-          <a href="https://medium.com/deeptempo" target="_blank"><i class="fab fa-medium"></i></a>
-        </div>
-        <div class="footer__certifications">
-          <img src="img/native-app-accelerator-badge.png" alt="Native App Accelerator Badge" class="footer-cert-logo">
-          <img src="img/nvidia-inception-program-badge.png" alt="Nvidia Inception Program Badge" class="footer-cert-logo">
-          <img src="img/BNY_Ascent.png" alt="BNY_Ascent Badge" class="footer-cert-logo">
-        </div>
-      </div>
-      <div class="col-1-of-2">
-        <picture class="footer__logo">
-          <img alt="Full logo" src="img/logo-full-color.png">
-        </picture>
-        <p class="footer__copyright">
-          DeepTempo was built by a team of deep learning engineers and enterprise system builders, many of whom have spent years in security operations teams. We believe in harnessing collective defense for cyber security via deep learning, to make the lives of security operations teams better while restoring the initiative to the defenders.
-        </p>
-      </div>
-    </div>
-  </footer>
+  <!-- Footer will be inserted here by JavaScript -->
 
-  <!-- MOBILE MENU SCRIPT (same as index.html) -->
-  <script>
-    const mobileMenu = document.getElementById('mobile-menu');
-    const navbarNav = document.getElementById('navbar-overlay');
-    const closeMenu = document.getElementById('close-menu');
-
-    mobileMenu.addEventListener('click', () => {
-      navbarNav.classList.add('active');
-    });
-
-    closeMenu.addEventListener('click', () => {
-      navbarNav.classList.remove('active');
-    });
-  </script>
-  <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48299015.js"></script>
-  <!-- End of HubSpot Embed Code -->
+  <!-- Include the header and footer components -->
+  <script src="js/header-component.js"></script>
+  <script src="js/footer-component.js"></script>
 </body>
 </html>
 
