--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <section class="hero-section">
             <div class="hero-section-content">
                 <h1 class="hero-title">Cybersecurity powered by Deep Learning</h1>
-                <p class="hero-subtitle">Detect threats with unprecedented accuracy using our advanced AI models</p>
-                <p class="intro-text">DeepTempo's Tempo LogLM is a revolutionary deep learning model that understands the language of logs, providing unparalleled threat detection capabilities.</p>
+                <p class="hero-subtitle">Detect threats with unprecedented accuracy and adaptability using our unique foundation models</p>
+                <p class="intro-text">DeepTempo's Tempo LogLM is a purpose-built deep learning model that understands the language of logs, improving threat detection, isolation and remediation.</p>
             </div>
         </section>
 
@@ -55,7 +55,7 @@
                     <div class="col-1-of-2">
                         <p class="paragraph">DeepTempo builds LogLMs (Log Language Models), Foundation Models uniquely able to rapidly adapt to new environments while retaining extraordinary accuracy. The LogLMs are used to better identify potential attacks.
                         </p>
-                        <p class="paragraph">DeepTempo helps to keep defenders ahead of attackers by increasing the productivity of cyber defense while saving costs by applying our Tempo LogLM based solutions.</p>
+                        <p class="paragraph">DeepTempo helps to keep defenders ahead of attackers by increasing the productivity of cyber defense while saving costs by applying our Tempo LogLM-based solutions.</p>
                         <p class="paragraph">Deep learning is more than cutting-edge technology. Foundation models, like Tempo LogLM, can apply what they learn in one environment to each new environment they encounter. They are collective intelligence - at work in defense of us all.</p>
                     </div>
                     <div class="col-1-of-2">
