--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="hero-section-content">
                 <h1 class="hero-title">Cybersecurity powered by Deep Learning</h1>
                 <p class="hero-subtitle">Detect threats with unprecedented accuracy and adaptability using our unique foundation models</p>
-                <p class="intro-text">DeepTempo's Tempo LogLM is a purpose-built deep learning model that understands the language of logs, improving threat detection, isolation and remediation.</p>
+                <p class="intro-text">DeepTempo's Tempo LogLM is a purpose-built deep learning model that understands the language of logs, improving threat detection, isolation, and remediation.</p>
             </div>
         </section>
 
