fixed wording on product page

--- a/product.html
+++ b/product.html
@@ -38,7 +38,7 @@
         <section class="hero-section">
             <div class="hero-section-content">
                 <h1 class="hero-title">DeepTempo Products</h1>
-                <p class="hero-subtitle">Securing your enterprise with cutting-edge AI, whether on-premise or in the cloud</p>
+                <p class="hero-subtitle">Securing your enterprise with foundation models and deep learning, whether on-premise or in the cloud</p>
             </div>
         </section>
         
