fixed wording and formatting on index and product

--- a/index.html
+++ b/index.html
@@ -37,18 +37,22 @@
 
         <section class="hero-section">
             <div class="hero-section-content">
-                <h1 class="hero-title">Cybersecurity powered by Deep Learning</h1>
-                <p class="hero-subtitle">Detect threats with unprecedented accuracy and adaptability using our unique foundation models</p>
-                <p class="intro-text">DeepTempo's Tempo LogLM is a purpose-built deep learning model that understands the language of logs, improving threat detection, isolation, and remediation.</p>
+
+                <div class="row">
+                    <h1 class="hero-title ">Cybersecurity powered by Deep Learning</h1>
+                    <p class="hero-subtitle">Detect threats with unprecedented accuracy and adaptability using our unique foundation models. DeepTempo's Tempo LogLM is a purpose-built deep learning model that understands the language of logs, improving threat detection, isolation, and remediation.</p>
+                </div>
             </div>
         </section>
 
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">
-                        Collective Deep Learning For Cybersecurity
-                    </h2>
+                <div class="row">
+                    <div class="u-center-text u-margin-bottom-big">
+                        <h2 class="heading-secondary">
+                            Collective Deep Learning For Cybersecurity
+                        </h2>
+                    </div>
                 </div>
 
                 <div class="row">
