--- a/product.html
+++ b/product.html
@@ -36,9 +36,11 @@
         <!-- Header will be inserted here by JavaScript -->
 
         <section class="hero-section">
-            <div class="hero-section-content">
-                <h1 class="hero-title">DeepTempo Products</h1>
-                <p class="hero-subtitle">Securing your enterprise with foundation models and deep learning, whether on-premise or in the cloud</p>
+            <div class="hero-section-content u-center-text">
+                <div class="row">
+                    <h1 class="hero-title">DeepTempo Products</h1>
+                    <p class="hero-subtitle">Securing your enterprise with foundation models and deep learning, whether on-premise or in the cloud</p>
+                </div>
             </div>
         </section>
         
