fixed formatting on contact

--- a/contact-us.html
+++ b/contact-us.html
@@ -37,8 +37,10 @@
 
         <section class="hero-section">
             <div class="hero-section-content">
-                <h1 class="hero-title">Get in Touch with DeepTempo</h1>
-                <p class="hero-subtitle">We'd love to hear from you. Whether you have questions about our products, partnership opportunities, or anything else—our team is ready to help.</p>
+                <div class="row">
+                    <h1 class="hero-title">Get in Touch with DeepTempo</h1>
+                    <p class="hero-subtitle">We'd love to hear from you. Whether you have questions about our products, partnership opportunities, or anything else—our team is ready to help.</p>
+                </div>
             </div>
         </section>
         
