fixed wording on GTC.html

--- a/GTC.html
+++ b/GTC.html
@@ -188,7 +188,7 @@
         <div class="intro-container">
             <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">Experience Tempo at GTC 2025</h2>
             <p style="text-align: center; font-size: 2.2rem; margin-bottom: 3rem;">
-            We invite you to visit us at the Snowflake booth during GTC 2025 for an opportunity to experience Tempo firsthand. By completing a simple challenge at our booth, you can enter a contest to win one of two Meta Quest headsets. This is a unique chance to engage with our team, explore the capabilities of Tempo, and potentially walk away with cutting-edge VR technology.
+            We invite you to visit us at the Snowflake booth during GTC 2025 for an opportunity to experience Tempo firsthand. By completing a simple challenge at our booth, you can enter a contest to win a Meta Quest headset. This is a unique chance to engage with our team, explore the capabilities of Tempo, and potentially walk away with cutting-edge VR technology.
             </p>
         </div>
         </section>
