--- a/product.html
+++ b/product.html
@@ -39,7 +39,7 @@
             <div class="hero-section-content u-center-text">
                 <div class="row">
                     <h1 class="hero-title">DeepTempo Products</h1>
-                    <p class="hero-subtitle">Securing your enterprise with foundation models and deep learning, whether on-premise or in the cloud</p>
+                    <p class="hero-subtitle">Securing your enterprise with deep learning foundation models, whether on-premise or in the cloud</p>
                 </div>
             </div>
         </section>
