--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <div class="row">
                     <h1 class="hero-title ">Cybersecurity powered by Deep Learning</h1>
-                    <p class="hero-subtitle">Detect threats with unprecedented accuracy and adaptability using our unique foundation models. DeepTempo's Tempo LogLM is a purpose-built deep learning model that understands the language of logs, improving threat detection, isolation, and remediation.</p>
+                    <p class="hero-subtitle">Detect threats with unprecedented accuracy and adaptability and then rapidly understand and isolate them. DeepTempo's Tempo LogLM is a purpose-built deep learning model that understands the language of logs, improving threat detection, isolation, and remediation.</p>
                 </div>
             </div>
         </section>
