--- a/product.html
+++ b/product.html
@@ -123,12 +123,16 @@
                       Provides detailed context in all security alerts
                     </p>
                     <p style="margin-bottom: 1rem;">
+                      <i class="fa-solid fa-right-left" style="color: #ff3333; margin-right: 10px;"></i>
+                      Feeds into your SIEM w/ alerts and additional context
+                    </p>
+                    <p style="margin-bottom: 1rem;">
                       <i class="fas fa-dollar-sign" style="color: #ff3333; margin-right: 10px;"></i>
                       Reduces SIEM spend with lower false positives
                     </p>
                     <p style="margin-bottom: 1rem;">
                       <i class="fas fa-fingerprint" style="color: #ff3333; margin-right: 10px;"></i>
-                      Creates comprehensive Embeddings Source of Truth
+                      Creates comprehensive Embeddings as the Source of Truth
                     </p>
                   </div>
                 </div>
@@ -144,7 +148,7 @@
                   <div style="font-size: 1.25rem; line-height: 1.8; text-align: center; margin-top: 1rem;">
                     <p style="margin-bottom: 1rem;">
                       <i class="fas fa-vector-square" style="color: #ff3333; margin-right: 10px;"></i>
-                      Leverages advanced embeddings technology
+                      Leverages those same advanced embeddings for threat hunting and forensics
                     </p>
                     <p style="margin-bottom: 1rem;">
                       <i class="fas fa-shield-alt" style="color: #ff3333; margin-right: 10px;"></i>
@@ -160,7 +164,11 @@
                     </p>
                     <p style="margin-bottom: 1rem;">
                       <i class="fas fa-handshake" style="color: #ff3333; margin-right: 10px;"></i>
-                      Compatible with Mandiant and other security platforms
+                      Compatible with many other security platforms. 
+                    </p>
+                    <p style="margin-bottom: 1rem;">
+                      <i class="fa-solid fa-face-smile" style="color: #ff3333; margin-right: 10px;"></i>
+                      Your threat hunters and IR teams will enjoy the UX.
                     </p>
                   </div>
                 </div>
