added salesintel tracking to all pages

--- a/GTC.html
+++ b/GTC.html
@@ -150,6 +150,7 @@
     
     <body>
         <!-- Header will be inserted here by JavaScript -->
+        <script charset="utf-8" type="text/javascript" src="https://api-gateway.scriptintel.io/service/visitorintel/visitorTag/276080/script.js?apiKey=Mjc2MDgwZGU2YmVlOTgtYWRkMi00ZTU3LWEwYWMtZDUyOWI4ZjI2MzJk"></script>
 
     <!-- Hero Section with Consistent Styling -->
     <section class="hero-section">
