--- a/openness.html
+++ b/openness.html
@@ -25,6 +25,7 @@
 </head>
 <body>
   <!-- Header will be inserted here by JavaScript -->
+  <script charset="utf-8" type="text/javascript" src="https://api-gateway.scriptintel.io/service/visitorintel/visitorTag/276080/script.js?apiKey=Mjc2MDgwZGU2YmVlOTgtYWRkMi00ZTU3LWEwYWMtZDUyOWI4ZjI2MzJk"></script>
 
   <!-- DeepMitre Section -->
   <section class="hero-section">
