--- a/product.html
+++ b/product.html
@@ -34,6 +34,7 @@
     
     <body>
         <!-- Header will be inserted here by JavaScript -->
+        <script charset="utf-8" type="text/javascript" src="https://api-gateway.scriptintel.io/service/visitorintel/visitorTag/276080/script.js?apiKey=Mjc2MDgwZGU2YmVlOTgtYWRkMi00ZTU3LWEwYWMtZDUyOWI4ZjI2MzJk"></script>
 
         <section class="hero-section">
             <div class="hero-section-content u-center-text">
